5.5.4 (07-10-2019)
- Fix: Print program conclusion - hide left menu ( #UL-ISA-1056 )
5.5.3 (02-10-2019)
- Fix: Curriculum aggregator entry line search should exclude annuled enrolments ( #UL-FM-1540 )

5.5.2 (30-09-2019)
- Fix: Remove space in student id's prefix when importing students from DGES

5.5.1 (27-09-2019)
- Fix: Fixed execution semester selection on competence course marksheet management (backoffice) 

5.5.0 (20-09-2019)
- Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)

5.4.1 (16-09-2019)
5.4.0 (13-09-2019)
- Improvement: Changed servlets to have async support needed by websockets

5.3.4 (09-09-2019)
- Bug Fix: In 1A1V importation, for students already registered in the system check if default country address exists. If not create the default fiscal address before fiscal data edition in registered person.

5.3.3 (04-09-2019)
- Fix: In First Time First Year include exception args in order to print error message correctly formatted

5.3.2 (24-08-2019)
- Fix: added missing label on shifts enrolment proccess  ( #UL-FBA-737 )

5.3.1 (23-08-2019)
- Improvement: added new fields to Moodle Exporter ( #UL-FF-1711 )

5.3.0 (07-08-2019)
- Refactor: Support for logs in automatic debt generation execution
- Bug fix: Prevent creation of checksum in link to access debt account from registration details page
- Improvement: In 1A1V form for edition of address, present district subdivision dropdown if country is selected and is default country. Or else is simple text field.

5.2.0 (01-08-2019)
- Improvement: added season information to enrolments sheet on registration history report ( #UL-ISA-863 )
- Refactor: Removed code related to PersonUL <-> SecondNationality

5.1.0 (31-07-2019)
- Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)

5.0.0 (29-07-2019)