@@ -1,5 +1,8 @@
+- Refactor: changed MobilityRegistatrionUlisboaInformation domain relations from ExecutionSemester to ExecutionInterval
+
 5.5.4 (07-10-2019)
 - Fix: Print program conclusion - hide left menu ( #UL-ISA-1056 )
+
 5.5.3 (02-10-2019)
 - Fix: Curriculum aggregator entry line search should exclude annuled enrolments ( #UL-FM-1540 )
 
